--- a/.github/workflows/01-Generate_Firmware_Debug.yaml
+++ b/.github/workflows/01-Generate_Firmware_Debug.yaml
@@ -1,28 +1,11 @@
-name: 01-Generate Firmware_Debug
+name: Generate Firmware
 on:
   push:
-    branches-ignore:
-      - main
-      - "tests/**"
-  pull_request:
     branches:
-      - 'main'       
-      - 'release/**'
-  workflow_dispatch:
-    inputs:
-      branch: 
-        description: 'Branch to test'
-        type: string
-        default: 'dev'
-      ADAPTER_SN_MG12: 
-        description: 'Adapter serial number of MG12'
-        type: string
-        default: '440189400'
-      ADAPTER_SN_MG24: 
-        description: 'Adapter serial number of MG24'
-        type: string
-        default: '440133193'
-    
+    - '*'         # matches every branch that doesn't contain a '/'
+    - '*/*'       # matches every branch containing a single '/'
+    - '**'        # matches every branch
+
 env:
   AM_CORRETTO_17: https://corretto.aws/downloads/latest/amazon-corretto-17-x64-linux-jdk.tar.gz
   SLC_CLI_URL: https://www.silabs.com/documents/login/software/slc_cli_linux.zip
@@ -32,76 +15,44 @@ env:
   GECKO_SDK_REPO: https://github.com/SiliconLabs/gecko_sdk.git
   SDK_VER: v4.4.2
   JLINK_SEGGER_URL: https://www.segger.com/downloads/jlink/JLink_Linux_x86_64.tgz
-  TASK: gen-only  
+  TASK: gen-only
   JLINK_PATH: /opt/SEGGER/JLink/libjlinkarm.so
   REPO_BRANCH: ${{ github.head_ref || github.ref_name }}
-  BOARD_NAME_MG12: brd4161a
-  BOARD_NAME_MG24: brd4187c
-  ADAPTER_SN_MG12: ${{ github.event.inputs.ADAPTER_SN_MG12 }} #440189400
-  ADAPTER_SN_MG24: ${{ github.event.inputs.ADAPTER_SN_MG24 }} #440133193
-  HOST_IP: 192.168.1.69
-  TOOL_DIRS: arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi/bin
-  COMPILER: GCC
-  TOOL_CHAINS: GCC
-  COMPONENT: all
-  CHIP_MG12: EFR32MG12
-  CHIP_MG24: EFR32MG24BXXXF1536
 jobs:
   job1:
-    name: Generate Firmware
+    name: Generate Firmware for MG24 with GCC
     runs-on: ubuntu-20.04
     permissions:
       contents: read
       pull-requests: write
-      
+    env:
+      BOARD_NAME: brd4187c
+      HOST_IP: 192.168.1.69
+      TOOL_DIRS: arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi/bin
+      COMPILER: GCC
+      TOOL_CHAINS: GCC
+      TASK: gen-only
+      COMPONENTS: all
+      ADAPTER_SN: 440133193
+      CHIP: EFR32MG24BXXXF1536
     steps:
-    - name: Trigger
-      run: |
-        echo "Triggered by ${{github.event_name}} event"
-        echo "Repo root directory: $GITHUB_WORKSPACE"
-        echo "Current directory: $PWD"
-    - name: Check Branch Input
-      run: |
-            if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-              if [ -z "${{ github.event.inputs.branch }}" ]; then
-                echo "Branch input is required for manual trigger."
-                exit 1
-              fi
-            fi              
     - name: Checkout
       uses: actions/checkout@v4.1.7
-      with:
-        ref: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.branch || github.ref }}"
-    - name: Verify directory
-      run: |
-          echo "Cloned to: $(pwd)"
-          ls -la /home/runner/work/${{ github.event.repository.name }}
-    - name: Log Current Branch and Commit
-      run: |
-          echo "Current branch: $(git rev-parse --abbrev-ref HEAD)"
-          echo "Current commit: $(git rev-parse HEAD)" 
     - name: Install Simplicity SDK
       if: always()
       run: |
-        if [ -d "simplicity_sdk" ]; then
-          echo "Removing existing simplicity_sdk folder..."
-          rm -rf simplicity_sdk
-        fi
+        mkdir simplicity_studio
+        cd simplicity_studio
         git clone $SIM_REPO
-        cd simplicity_sdk || exit
+        cd simplicity_sdk
         ls -la
         cd ..
         ls -la
     - name: Install Gecko SDK
       if: always()
       run: |
-        if [ -d "gecko_sdk_$SDK_VER" ]; then
-          echo "Removing existing gecko_sdk_$SDK_VER folder..."
-          rm -rf gecko_sdk_$SDK_VER
-        fi
-        echo "Cloning the repository..."
         git clone $GECKO_SDK_REPO gecko_sdk_$SDK_VER
-        cd gecko_sdk_$SDK_VER || exit
+        cd gecko_sdk_$SDK_VER
         git checkout tags/$SDK_VER
         ls -la
         mkdir extension
@@ -172,10 +123,6 @@ jobs:
         sudo apt install python3-pip
     - name: Generate image
       run: |
-        echo "Current directory: $PWD"
-        ls -la
-        echo "List file in simplicity_sdk folfer"
-        ls -la "$(pwd)/simplicity_sdk"
         export PATH=$PATH:$PWD/commander
         export PATH=$PATH:$PWD/slc_cli
         export TOOL_DIRS=$PWD/$TOOL_DIRS
@@ -183,7 +130,7 @@ jobs:
         export SDK_PATH=$PWD/gecko_sdk_$SDK_VER
         export PATH=$PATH:$PWD/amazon-corretto-17.0.12.7.1-linux-x64/bin
         echo $PATH
-        echo 2 | sudo update-alternatives --config java || exit 1
+        echo 2 | sudo update-alternatives --config java
         java --version
         slc --version
         slc configuration --sdk=${SDK_PATH}
@@ -191,30 +138,156 @@ jobs:
         slc signature trust --sdk $SDK_PATH
         slc configuration -gcc=$TOOL_DIRS
         make prepare
-        cd build || exit 1
-        echo "Generate image for MG12"
+        cd build
         slc signature trust -extpath $SDK_PATH/extension/IEC60730_Libs
-        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG12 || exit 1
-        make integration_test_info -j4 || exit 1
-        export HOST_IP=$HOST_IP
+        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=${BOARD_NAME}
+        make integration_test_info -j4
+        export LST_PATH=$PWD/test/integration_test/build/${BOARD_NAME}/integration_test_iec60730_watchdog/S
+        export HOST_IP=192.168.1.69
         cd ../test/
         ls -la
-        bash execute_integration_test.sh $BOARD_NAME_MG12 $TASK $COMPONENTS $ADAPTER_SN_MG12 $COMPILER || exit 1
-        echo "Generate image for MG24"
-        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG24 || exit 1
-        bash execute_integration_test.sh $BOARD_NAME_MG24 $TASK $COMPONENTS $ADAPTER_SN_MG24 $COMPILER || exit 1
-        
-    - name: Upload firmware MG12
-      uses: actions/upload-artifact@v4.3.4
-      with:
-        name: firmware_mg12_gcc
-        path: ${{ github.workspace }}/build/test/integration_test/build/$BOARD_NAME_MG12/
-        warn: Output a warning but do not fail the action
-        retention-days: 90
-    - name: Upload firmware MG24
+        bash execute_integration_test.sh $BOARD_NAME $TASK $COMPONENTS $ADAPTER_SN $COMPILER
+    - name: Upload firmware
       uses: actions/upload-artifact@v4.3.4
       with:
         name: firmware_mg24_gcc
-        path: ${{ github.workspace }}/build/test/integration_test/build/$BOARD_NAME_MG24/
+        path: ${{ github.workspace }}/build/test/integration_test/build/${{ env.BOARD_NAME }}/${{ env.COMPILER }}/integration_test_iec60730_invariable_memory/NS/
+        warn: Output a warning but do not fail the action
+        retention-days: 90
+  job2:
+    name: Generate Firmware for MG12 with GCC
+    runs-on: ubuntu-20.04
+    permissions:
+      contents: read
+      pull-requests: write
+    env:
+      BOARD_NAME: brd4161a
+      HOST_IP: 192.168.1.69
+      TOOL_DIRS: arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi/bin
+      COMPILER: GCC
+      TOOL_CHAINS: GCC
+      PLATFORM: MG12
+      TASK: all
+      COMPONENTS: all
+      ADAPTER_SN: 440189400
+      CHIP: EFR32MG12
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4.1.7
+    - name: Install Simplicity SDK
+      if: always()
+      run: |
+        mkdir simplicity_studio
+        cd simplicity_studio
+        git clone $SIM_REPO
+        cd simplicity_sdk
+        ls -la
+        cd ..
+        ls -la
+    - name: Install Gecko SDK
+      if: always()
+      run: |
+        git clone $GECKO_SDK_REPO gecko_sdk_$SDK_VER
+        cd gecko_sdk_$SDK_VER
+        git checkout tags/$SDK_VER
+        ls -la
+        mkdir extension
+        cd extension
+        git clone https://github.com/SiliconLabs/IEC60730_Libs.git
+        cd IEC60730_Libs
+        git checkout $REPO_BRANCH
+        ls -la
+        cd ..
+        ls -la
+        cd ..
+        ls -la
+    - name: Install Amazon Corretto 17
+      if: always()
+      run: |
+        wget $AM_CORRETTO_17
+        tar -xzf amazon-corretto-17-x64-linux-jdk.tar.gz
+        ls -la
+    - name: Install SLC CLI
+      if: always()
+      run: |
+        wget $SLC_CLI_URL
+        unzip slc_cli_linux.zip
+        ls -la
+    - name: Install Simplicity Commander
+      if: always()
+      run: |
+        wget $COMMANDER_URL
+        unzip SimplicityCommander-Linux.zip
+        cd SimplicityCommander-Linux
+        ls -la
+        cd ..
+        mkdir commander
+        tar -xf SimplicityCommander-Linux/Commander_linux_x86_64_*.tar.bz commander
+        cd commander
+        ls -la
+    - name: Install GCC
+      if: always()
+      run: |
+        wget $GCC_URL
+        tar -xf arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi.tar.xz
+        ls -la
+        cd arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi
+        ls -la
+    - name: Install Ninja build
+      run: |
+        sudo apt update
+        sudo apt -y install ninja-build
+        ninja --version
+    - name: Install python3.11
+      if: always()
+      run: |
+        sudo apt update
+        sudo apt upgrade
+        sudo add-apt-repository ppa:deadsnakes/ppa -y
+        sudo apt update
+        sudo apt install python3.11
+        python3.11 --version
+        which python3.11
+        cat ~/.bashrc
+        echo "alias python3=python3.11" >> ~/.bashrc
+        echo "alias python3=python3.11" >> ~/.bash_profile
+        cat ~/.bashrc
+        source ~/.bash_profile
+        source ~/.bashrc
+        python3 --version
+        sudo apt install python3.11-full
+        sudo apt install python3-pip
+    - name: Generate image
+      run: |
+        export PATH=$PATH:$PWD/commander
+        export PATH=$PATH:$PWD/slc_cli
+        export TOOL_DIRS=$PWD/$TOOL_DIRS
+        export PATH=$PATH:/usr/bin/
+        export SDK_PATH=$PWD/gecko_sdk_$SDK_VER
+        export PATH=$PATH:$PWD/amazon-corretto-17.0.12.7.1-linux-x64/bin
+        echo $PATH
+        echo 2 | sudo update-alternatives --config java
+        java --version
+        slc --version
+        slc configuration --sdk=${SDK_PATH}
+        ninja --version
+        slc signature trust --sdk $SDK_PATH
+        slc configuration -gcc=$TOOL_DIRS
+        make prepare
+        cd build
+        slc signature trust -extpath $SDK_PATH/extension/IEC60730_Libs
+        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=${BOARD_NAME}
+        make integration_test_info -j4
+        export LST_PATH=$PWD/test/integration_test/build/${BOARD_NAME}/integration_test_iec60730_watchdog/S
+        ls -la
+        git branch
+        cd ../test/
+        ls -la
+        bash execute_integration_test.sh ${BOARD_NAME} $TASK $COMPONENTS $ADAPTER_SN $COMPILER
+    - name: Upload firmware
+      uses: actions/upload-artifact@v4.3.4
+      with:
+        name: firmware_mg12_gcc
+        path: ${{ github.workspace }}/build/test/integration_test/build/${{ env.BOARD_NAME }}/${{ env.COMPILER }}/integration_test_iec60730_invariable_memory/NS/
         warn: Output a warning but do not fail the action
         retention-days: 90
