--- a/.github/workflows/01-Generate_Firmware.yaml
+++ b/.github/workflows/01-Generate_Firmware.yaml
@@ -228,13 +228,13 @@ jobs:
       uses: actions/upload-artifact@v4.3.4
       with:
         name: firmware_mg12_gcc
-        path: ${{ github.workspace }}/build/test/integration_test/build_MG12/${{ env.BOARD_NAME_MG12 }}/${{ env.COMPILER }}/
+        path: ${{ github.workspace }}/build/test/integration_test/build_MG12/${{ env.BOARD_NAME_MG12 }}/
         warn: Output a warning but do not fail the action
         retention-days: 90
     - name: Upload firmware MG24
       uses: actions/upload-artifact@v4.3.4
       with:
         name: firmware_mg24_gcc
-        path: ${{ github.workspace }}/build/test/integration_test/build/${{ env.BOARD_NAME_MG24 }}/${{ env.COMPILER }}/
+        path: ${{ github.workspace }}/build/test/integration_test/build/${{ env.BOARD_NAME_MG24 }}/
         warn: Output a warning but do not fail the action
         retention-days: 90
